--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Once you are redirected (after the repository is done being created) drag and drop files onto the page to begin uploading. Alternatively, you can manually search for files to upload. <br/>Once those have uploaded, optionally enter a description of the commit and press the "Commit changes" button.</p>
         <img src="assets/step_4.png" alt="step 4">
         <h2>Step 4 - Navigate to Settings</h2>
-        <p>Now that the files are committed, navigate to the settings page using the toolbar.</p>
+        <p>Wait for the file processing screen to disappear. Now that the files are committed, navigate to the settings page using the toolbar.</p>
         <img src="assets/step_5.png" alt="step 5">
         <h2>Step 5 - Select Master Branch</h2>
         <p>Once on the settings page, navigate down to the GitHub Pages section. Click "None" and select "master branch" to tell GitHub what folder to host from.</p>
